# MIDLPy

./: .gitignore  CITATION.cff  README.md  TODO_mhd_propagation.md  pyproject.toml
examples/: merge_imp8_tutorial.ipynb
midl/: __init__.py  _cache.py  _loader.py  _merge.py  _propagate.py
tests/: test_cache.py  test_loader.py  test_merge.py  test_propagate.py  test_savers.py  test_smoke.py
tests/data/: 202403_mhd_032Re.csv
